Share feature implementation