@@ -1,19 +1,24 @@
 package com.ssa.serviceImpl;
 
 import com.ssa.constant.StatusConstants;
-import com.ssa.model.Likes;
-import com.ssa.model.Post;
-import com.ssa.model.User;
+import com.ssa.model.*;
 import com.ssa.repository.LikeRepository;
 import com.ssa.repository.PostRepository;
 import com.ssa.repository.UserRepository;
 import com.ssa.response.ApiResponse;
+import com.ssa.response.GetAllPostResponse;
 import com.ssa.service.LikeService;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
@@ -63,13 +68,48 @@ public class LikeServiceImplementation implements LikeService {
     }
 
     @Override
-    public ResponseEntity<ApiResponse<Object>> getAllPostsLikedByUser(Long userId) {
-        List<Likes> likedPosts = likeRepository.findByUserId_Id(userId);
-        if (likedPosts.isEmpty()) {
+    public ResponseEntity<ApiResponse<Object>> getAllPostsLikedByUser(Long userId, int page, int size, String sortBy) {
+        Pageable pageable = PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, sortBy == null ? "createdAt" : sortBy));
+        Page<Likes> likedPostsPage = likeRepository.findByUserId_Id(userId, pageable);
+
+        if (likedPostsPage.isEmpty()) {
             return ResponseEntity.badRequest().body(new ApiResponse<>(StatusConstants.invalid(), "No Post Found For The User"));
         }
 
-        List<Post> posts = likedPosts.stream().map(Likes::getPostId).collect(Collectors.toList());
-        return ResponseEntity.ok(new ApiResponse<>(StatusConstants.success(),posts));
+        List<Post> posts = likedPostsPage.stream().map(Likes::getPostId).toList();
+
+        List<GetAllPostResponse> postResponses = posts.stream()
+                .map(this::mapPostToResponses)
+                .toList();
+
+        Map<String, Object> responseData = new HashMap<>();
+        responseData.put("countOfLikedPosts", likeRepository.countByUserId_Id(userId));
+        responseData.put("totalPosts", likedPostsPage.getTotalElements());
+        responseData.put("totalPages", likedPostsPage.getTotalPages());
+        responseData.put("currentPage", likedPostsPage.getNumber());
+        responseData.put("pageSize", likedPostsPage.getSize());
+        responseData.put("posts", postResponses);
+
+        return ResponseEntity.ok(new ApiResponse<>(StatusConstants.success(), responseData));
+    }
+
+
+    private GetAllPostResponse mapPostToResponses(Post post) {
+        GetAllPostResponse response = new GetAllPostResponse();
+        response.setId(post.getId());
+        response.setUserId(post.getUserId().getId());
+        response.setTitle(post.getTitle());
+        response.setDescription(post.getDescription());
+        response.setTags(post.getTags().stream().map(Tag::getName).toList());
+        response.setLikes(post.getLikes().size());
+        response.setComments(post.getComments().size());
+        if (post.getImage() != null && !post.getImage().isEmpty()) {
+            response.setImages(post.getImage().stream()
+                    .map(Images::getImageUrl)
+                    .toList());
+        }
+        response.setCreatedAt(post.getCreatedAt());
+        response.setUserName(post.getUserId().getUserName());
+        return response;
     }
 }
